# ECSpp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  Benchmarks.cpp  CMakeLists.txt  ECS_LIB.sln  ECSpp.sln  ECSpp.vcxproj  ECSpp.vcxproj.filters  ECSpp_Benchmarks.vcxproj  ECSpp_Benchmarks.vcxproj.filters  ECSpp_Tests.vcxproj  LICENSE  README.md  Tests.cpp  doxyConfig  makeCoverage.sh  makeSolution_Win.bat  premake5.lua  runBenchmarks.sh  runTests.sh
.github/workflows/: Coverage.yml  ccpp.yml  cmake.yml
BenchmarksResults/: ECSpp.cpp  benchECSpp1.txt  benchECSpp2.txt  benchECSpp3.txt  benchEntt1.txt  benchEntt2.txt  benchEntt3.txt  ecspp.cpp  ecspp.json  entt.cpp  entt.json  makeCharts.ipynb
ECS_LIB/: ArchetypePool.cpp  ArchetypePool.h  Bitmask.cpp  Bitmask.h  CFilterGroup.cpp  CFilterGroup.h  ECS_LIB.vcxproj  ECS_LIB.vcxproj.filters  TuplePlus.h  main.cpp
GTest/: gtest_main.lib  gtest_maind.lib
benchmarks/: CMakeLists.txt  ecspp.cpp
docs/: Archetype_8h_source.html  Assert_8h_source.html  CFilter_8h_source.html  CMask_8h_source.html  CPool_8h_source.html  Component_8h_source.html  EntityCollection_8h_source.html  EntityList_8h_source.html  EntityManager_8h_source.html  EntitySpawner_8h_source.html  IndexType_8h_source.html  Index_8h_source.html  Notifier_8h_source.html  Pipeline_8h_source.html  Pool_8h_source.html  Selection_8h_source.html  SmallVector_8h_source.html  TuplePP_8h_source.html  annotated.html  classepp_1_1Archetype-members.html  classepp_1_1Archetype.html  classepp_1_1CFilter-members.html  classepp_1_1CFilter.html  classepp_1_1CMask-members.html  classepp_1_1CMask.html  classepp_1_1CMetadata-members.html  classepp_1_1CMetadata.html  classepp_1_1CPool-members.html  classepp_1_1CPool.html  classepp_1_1EntityCell-members.html  classepp_1_1EntityCell.html  classepp_1_1EntityCollection-members.html  classepp_1_1EntityCollection.html  classepp_1_1EntityCollection_1_1Iterator-members.html  classepp_1_1EntityCollection_1_1Iterator.html  classepp_1_1EntityList-members.html  classepp_1_1EntityList.html  classepp_1_1EntityList_1_1Cell-members.html  classepp_1_1EntityList_1_1Cell.html  classepp_1_1EntityManager-members.html  (+109 more)
docs/html/: Archetype_8h_source.html  Assert_8h_source.html  CFilter_8h_source.html  CMask_8h_source.html  CPool_8h_source.html  Component_8h_source.html  EntityCollection_8h_source.html  EntitySpawner_8h_source.html  Pool_8h_source.html  TuplePP_8h_source.html  annotated.html  classepp_1_1Archetype-members.html  classepp_1_1Archetype.html  classepp_1_1CMask.html  classepp_1_1EntityCollection-members.html  classepp_1_1EntityCollection.html  classepp_1_1EntityList-members.html  classepp_1_1EntityManager-members.html  classepp_1_1EntitySpawner-members.html  classepp_1_1EntitySpawner.html  classepp_1_1EntitySpawner_1_1Creator-members.html  classepp_1_1Notifier-members.html  dir_29c3ea05a964de139daa9bae0d0920cb.html  dir_7a8cc46842d76bcb30abd8a9bc746589.html  dir_bebb87c101dc5a0e822d1a09f9879cdf.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_type.html  md_README.html  pages.html  structepp_1_1CMetadata-members.html  structepp_1_1ComponentId-members.html  structepp_1_1ComponentId.html  structepp_1_1EntVersion-members.html  structepp_1_1Entity-members.html  structepp_1_1Entity.html  structepp_1_1EntityCell_1_1Occupied-members.html  structepp_1_1EntityEvent.html  structepp_1_1ListIdx-members.html  (+9 more)
docs/latex/: annotated.tex  classepp_1_1Archetype.tex  classepp_1_1CFilter.tex  classepp_1_1CMask.tex  classepp_1_1CPool.tex  classepp_1_1EntityCell.tex  classepp_1_1EntityCollection.tex  classepp_1_1EntityList.tex  classepp_1_1EntityManager.tex  classepp_1_1EntitySpawner.eps  classepp_1_1EntitySpawner.tex  classepp_1_1EntitySpawner_1_1Creator.tex  classepp_1_1Notifier.eps  classepp_1_1Notifier.tex  hierarchy.tex  refman.tex  structepp_1_1Pool.tex  (+15 more)
include/: Component.h  System.h  World.h
src/: Component.cpp  ECSWorld.cpp  System.cpp  World.cpp
tests/: CMakeLists.txt
tests/EntityManager/: ComponentT.cpp  EntityListT.cpp  EntityManagerT.cpp  EntitySpawnerT.cpp  SelectionT.cpp
(+182 files in other folders)
